2004-05-19  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/glade-overrides.defs, gnome/defs/glade.defs: Renamed
	from libglade*.

2004-04-03  Andreas Rottmann  <a.rottmann@gmx.at>

	* gtk-types.defs (PrivateFlags, TreeViewMode): Removed.

2004-04-02  Andreas Rottmann  <a.rottmann@gmx.at>

	* ui.defs: Revised for GNOME 2.6.
	
	* gtk.defs: Removed broken functions, fixes.
	
	* gtk-types.defs: Removed broken types and re-added boxed types
	and interfaces.

2004-03-31  Andreas Rottmann  <a.rottmann@gmx.at>

	* gtk.defs, gtk-types.defs: Adapted for GTK+ 2.4.

2004-03-29  Andreas Rottmann  <a.rottmann@gmx.at>
	
	* gdk-types.defs (ColorSpace): Removed, is in gdk-pixbuf and
	named GdkColor_s_pace.
	
	* gtk-types.defs: Removed CTreeNode, CellType, CListDragPos,
	ButtonAction, CTreePos, CTreeExpanderStyle, CTreeExpansionType,
	SideType, MatchType, PreviewType, SubmenuDirection,
	SubmenuPlacement, which were all deprecated before GTK+ 2.0.

2004-02-08  Andy Wingo  <wingo@pobox.com>

	* ui.defs: Revert ui.defs to my local copy. There are still some
	problems, but it's better than before.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* ui.defs: Re-generated and tweaked.

	* ui-overrides.defs: New file.

	* gnome.defs: Miscellaneous fixes.

	* gnome-overrides.defs: New file.

	* canvas-overrides.defs: New file.

2003-12-16  Andy Wingo  <wingo@pobox.com>

	* gtk-overrides.defs: Allow NULL for the parent in iter_children.

2003-12-13  Andreas Rottmann  <a.rottmann@gmx.at>

	* Makefile.am (guilemodule_DATA): Added gnome-overrides.defs,
	ui-overrides.defs and canavas-overrides.defs.

2003-12-09  Andy Wingo  <wingo@pobox.com>

	* gtk-overrides.defs (iter_children): Return a list of the
	children instead of only the first iterator.

2003-11-30  Andreas Rottmann  <a.rottmann@gmx.at>

	* Makefile.am (guilemodule_DATA): Added gda.defs.

	* gda-overrides.defs: Un-ignore gda_value_*, ignore
	gda_value_new_* instead.

2003-11-25  Andy Wingo  <wingo@pobox.com>
