@@ -452,7 +452,7 @@
 )
 
 
-(include "ui-overrides.defs")
+(include "gnome-ui-overrides.defs")
 
 ;; From /usr/include/libgnomeui-2.0/libgnomeui/gnome-about.h
 
